# Training_2024_2025

./: .gitignore  LICENSE  README.md  index.css  index.html
bootstrap/: README.md
bootstrap/Task_1/: README.md  index.css  index.html
flowcharts/: README.md
flowcharts/Task_1/: Area_of_Circle.c  Factorial.c  Max_of_three.c  Max_of_two.c  Perimeter_of_Circle.c  Print_1_to_N.c  README.md  Series_1.c  Series_2.c  Series_3.c  Series_4.c  Series_5.c  Sum_of_one_to_N.c  sine.c
gherkin/Practice_1-Login_functionality/: generate-report.js  package-lock.json  package.json  server.js
gherkin/Practice_2-Resume_testing/: app.js  cucmber.js  generate_report.js  package-lock.json  package.json  playwright.cofig.js
gherkin/Practice_3-replit_testing/: cucumber.js  package-lock.json  package.json  replit.txt  server.js
html_css/: README.md
html_css/Task_1/: README.md  index.html
javascript/: README.md
javascript/Task_1/: README.md  array.js
javascript/Task_2/: README.md  array_symbol.js
javascript/Task_3/: README.md  home.html  index.html
rust/: .gitignore  README.md
rust/Practice_1-guessing_game/: README.md
rust/Practice_2-minigrep/: README.md
rust/Task_1-rust_rangers/: Cargo.toml  README.md
rust/Task_3-axum_movies/: Cargo.toml
rust/Task_3-axum_movies/src/: lib.rs  main.rs
rust/Task_3-axum_movies/src/handlers/: add_movie.rs  delete_movie.rs  demo_handler.rs  get_movies.rs  login.rs  mod.rs  register.rs
rust/Task_3-axum_movies/src/middlewares/: first.rs  log.rs  mod.rs  second.rs
rust/Task_3-axum_movies/src/routes/: mod.rs
(+54 files in other folders)
