[package]
name = "axum_movies"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
hyper = { version = "0.14", features = ["full"] }
bytes = "1.10.0"
http-body-util = "0.1.2"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio"] }
chrono = "0.4.39"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tower-http = { version = "0.5", features = ["trace"] }
lazy_static = "1.4"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
tower-cookies = "0.10"